--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Dan Foreman-Mackey <foreman.mackey@gmail.com>"]
 readme = "README.md"
 homepage = "https://github.com/dfm/discretionary"
 repository = "https://github.com/dfm/discretionary.git"
-description = "A tiny proc macro to make all your struct fields optional"
+description = "A tiny procedural macro to make all your struct fields optional"
 license = "Apache-2.0"
 documentation = "https://docs.rs/discretionary"
 categories = ["development-tools", "rust-patterns"]
