--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,8 @@ jobs:
           profile: minimal
           toolchain: ${{ matrix.rust }}
           override: true
-      - uses: actions-rs/cargo@v1
+      - name: Run 'cargo test'
+        uses: actions-rs/cargo@v1
         with:
           command: test
 
@@ -35,12 +36,13 @@ jobs:
           toolchain: stable
           override: true
           components: rustfmt, clippy
-      - uses: actions-rs/cargo@v1
+      - name: Run 'cargo fmt'
+        uses: actions-rs/cargo@v1
         with:
           command: fmt
           args: --all -- --check
-
-      - uses: actions-rs/cargo@v1
+      - name: Run 'cargo clippy'
+        uses: actions-rs/cargo@v1
         with:
           command: clippy
           args: -- -Dclippy::all -Dclippy::pedantic
